@@ -333,3 +333,70 @@ bubble_plot = function(plot_dat, lab_dat = NULL, x_var = NULL, y_var = NULL,
     }
   }
 }
+
+
+#Get plot layout for oncoplot
+plot_layout = function(clinicalFeatures = NULL, drawRowBar = TRUE, drawColBar = TRUE, draw_titv = FALSE){
+  if(is.null(clinicalFeatures)){
+    if(draw_titv){
+      if(!drawRowBar & !drawColBar){
+        mat_lo = matrix(data = c(1,2,3), nrow = 3, ncol = 1, byrow = TRUE)
+        lo = layout(mat = mat_lo, heights = c(12, 4, 4))
+      }else if(!drawRowBar){
+        mat_lo = matrix(data = c(1,2,3, 4), nrow = 4, ncol = 1, byrow = TRUE)
+        lo = layout(mat = mat_lo, heights = c(4, 12, 4, 4))
+      }else if(!drawColBar){
+        mat_lo = matrix(data = c(1,2,3,4,5,5), nrow = 3, ncol = 2, byrow = TRUE)
+        lo = layout(mat = mat_lo, heights = c(12, 4, 4), widths = c(4, 1))
+      }else{
+        mat_lo = matrix(data = c(1,2,3,4,5,6,7,7), nrow = 4, ncol = 2, byrow = TRUE)
+        lo = layout(mat = mat_lo, widths = c(4, 1), heights = c(4, 12, 4, 4))
+      }
+    }else{
+      if(!drawRowBar & !drawColBar){
+        mat_lo = matrix(data = c(1,2), nrow = 2, ncol = 1, byrow = TRUE)
+        lo = layout(mat = mat_lo, heights = c(12, 4))
+      }else if(!drawRowBar){
+        mat_lo = matrix(data = c(1,2,3), nrow = 3, ncol = 1, byrow = TRUE)
+        lo = layout(mat = mat_lo, heights = c(4, 12, 4))
+      }else if(!drawColBar){
+        mat_lo = matrix(data = c(1,2,3,3), nrow = 2, ncol = 2, byrow = TRUE)
+        lo = layout(mat = mat_lo, heights = c(12, 4), widths = c(4, 1))
+      }else{
+        mat_lo = matrix(data = c(1,2,3,4,5,5), nrow = 3, ncol = 2, byrow = TRUE)
+        lo = layout(mat = mat_lo, widths = c(4, 1), heights = c(4, 12, 4))
+      }
+    }
+  }else{
+    if(draw_titv){
+      if(!drawRowBar & !drawColBar){
+        mat_lo = matrix(data = c(1,2,3,4), nrow = 4, ncol = 1, byrow = TRUE)
+        lo = layout(mat = mat_lo, heights = c(12, 1, 4, 4))
+      }else if(!drawRowBar){
+        mat_lo = matrix(data = c(1,2,3,4,5), nrow = 5, ncol = 1, byrow = TRUE)
+        lo = layout(mat = mat_lo, heights = c(4, 12, 1, 4, 4))
+      }else if(!drawColBar){
+        mat_lo = matrix(data = c(1,2,3,4,5,5,6,6), nrow = 4, ncol = 2, byrow = TRUE)
+        lo = layout(mat = mat_lo, heights = c(12, 1, 4, 4), widths = c(4, 1))
+      }else{
+        mat_lo = matrix(data = c(1,2,3,4,5,6,7,8,9,9), nrow = 5, ncol = 2, byrow = TRUE)
+        lo = layout(mat = mat_lo, widths = c(4, 1), heights = c(4, 12, 1, 4, 4))
+      }
+    }else{
+      if(!drawRowBar & !drawColBar){
+        mat_lo = matrix(data = c(1,2,3), nrow = 3, ncol = 1, byrow = TRUE)
+        lo = layout(mat = mat_lo, heights = c(12, 1, 4))
+      }else if(!drawRowBar){
+        mat_lo = matrix(data = c(1,2,3,4), nrow = 4, ncol = 1, byrow = TRUE)
+        lo = layout(mat = mat_lo, heights = c(4, 12, 1, 4))
+      }else if(!drawColBar){
+        mat_lo = matrix(data = c(1,2,3,4,5,5), nrow = 3, ncol = 2, byrow = TRUE)
+        lo = layout(mat = mat_lo, heights = c(12, 1, 4), widths = c(4, 1))
+      }else{
+        mat_lo = matrix(data = c(1,2,3,4,5,6,7,7), nrow = 4, ncol = 2, byrow = TRUE)
+        lo = layout(mat = mat_lo, widths = c(4, 1), heights = c(4, 12, 1, 4))
+      }
+    }
+  }
+}
+
