@@ -6,6 +6,7 @@
 #'
 #' @param tnm output generated by \code{\link{trinucleotideMatrix}}
 #' @param maf an \code{\link{MAF}} object used to generate the matrix
+#' @param pVal p-value threshold for fisher's test. Default 0.05.
 #' @param title_size size of title. Default 1.3
 #' @param axis_lwd axis width. Default 1
 #' @param font_size font size. Default 1.2
@@ -20,23 +21,9 @@
 #' @seealso \code{\link{trinucleotideMatrix}} \code{\link{plotSignatures}}
 #' @export
 
-plotApobecDiff = function(tnm, maf, title_size = 1, axis_lwd = 1, font_size = 1.2){
+plotApobecDiff = function(tnm, maf, pVal = 0.05, title_size = 1, axis_lwd = 1, font_size = 1.2){
   sub.tbl <- tnm$APOBEC_scores
   sub.tbl$APOBEC_Enriched = factor(sub.tbl$APOBEC_Enriched, levels = c('yes', 'no')) #Set levels
-  yp = c(min(boxplot.stats(x = sub.tbl[,n_mutations])$stats), max(boxplot.stats(x = sub.tbl[,n_mutations])$stats))
-
-  if(length(boxplot.stats(x = sub.tbl[,n_mutations])$out) > 0){
-    yp[2] = min(boxplot.stats(x = sub.tbl[,n_mutations])$out)+3
-  }else{
-    yp[2] = yp[2]+3
-  }
-
-  yp = as.integer(seq(yp[1], yp[2], length.out = 5))
-  if(yp[1] <= 3){
-    yp[1] = 0
-  }else{
-    yp[1] = yp[1] - 3
-  }
 
   if(nrow(sub.tbl[!is.na(APOBEC_Enriched), mean(fraction_APOBEC_mutations), APOBEC_Enriched][APOBEC_Enriched %in% 'yes']) == 0){
     stop('None of the samples are enriched for APOBEC. Nothing to plot.')
@@ -54,10 +41,15 @@ plotApobecDiff = function(tnm, maf, title_size = 1, axis_lwd = 1, font_size = 1.
   mcr = mc$results
   mc$SampleSummary = merge(mc$SampleSummary, rbind(apobec.maf.summary, nonapobec.maf.summary))
 
-  if(nrow(mcr[pval < 0.05]) < 10){
-    mcg = mcr[1:10, Hugo_Symbol]
+  mcg = mcr[pval < pVal]
+  if(nrow(mcg) == 0){
+    stop('No differetially mutated genes found.')
+  }
+
+  if(nrow(mcg) < 10){
+    mcg = as.character(mcg[, Hugo_Symbol])
   }else{
-    mcg = mcr[pval < 0.05, Hugo_Symbol][1:10]
+    mcg = as.character(mcg[pval < 0.05, Hugo_Symbol])
   }
 
   apobec.mcg.gs = getGeneSummary(x = apobec.maf)[Hugo_Symbol %in% mcg, .(Hugo_Symbol, MutatedSamples)]
@@ -89,26 +81,31 @@ plotApobecDiff = function(tnm, maf, title_size = 1, axis_lwd = 1, font_size = 1.
   layout(matrix(c(1,2,3,1,4,4), 2, 3, byrow = TRUE), widths=c(2, 2, 2))
   par(bty="n", mgp = c(0.5,0.5,0), mar = c(2,3.5,4,0) + 0.1, las=1, tcl=-.25, font.main=4, xpd=NA)
 
-  boxplot(at = 1:2, n_mutations ~ APOBEC_Enriched, data = sub.tbl,  xaxt="n", boxwex=0.6, outline = TRUE, lty=1,
+  yp = as.integer(pretty(log10(sub.tbl[,n_mutations])))
+
+  boxplot(at = 1:2, log10(n_mutations) ~ APOBEC_Enriched, data = sub.tbl,  xaxt="n", boxwex=0.6, outline = TRUE, lty=1,
           outwex=0, staplewex=0, frame.plot = FALSE, col = c('maroon', 'royalblue'), yaxt = 'n',
-          ylim = c(min(yp), max(yp)),
-          outcol="gray70", outcex = 0.8, outpch  = 16, boxfill = NULL,
+          outcol="gray70", outcex = 0.3, outpch  = 16, boxfill = NULL, ylim = range(yp),
           border = c('maroon', 'royalblue'), lwd = 1.6, ylab = NA, xlab = NA)
 
   title(main = 'Mutation load between APOBEC &\nnon-APOBEC enriched samples', cex.main = title_size)
 
   axis(side = 1, at = c(1, 2), labels = na.omit(sub.tbl[,.N,APOBEC_Enriched])[,paste0('N=', N)],
        las = 1, tick = FALSE, font.axis = 1, cex = 2.5, font = 1, cex.axis = font_size, lwd = axis_lwd)
-  axis(side = 2, at = yp, lwd = axis_lwd, las = 1, font = 1, cex.axis = font_size, font.axis = 2)
+  axis(side = 2, at = , lwd = axis_lwd, las = 1, font = 1, cex.axis = font_size, font.axis = 2)
+  mtext(text = "# mutations (log10)", side = 2, las = 3, line = 2.1, cex = 0.8)
 
   p = wilcox.test(sub.tbl[APOBEC_Enriched %in% 'yes', n_mutations], sub.tbl[APOBEC_Enriched %in% 'no', n_mutations])$p.value
   if(p < 0.001 ){
     #lines(x = c(1.3, 1.8), y = rep(yp[length(yp)]-3, 2), lwd = 1.2)
-    text(x = 1.55, y = yp[length(yp)], labels = "***", cex = 3)
+    text(x = 1.55, y = yp[length(yp)], labels = "***", cex = font_size)
   }else if(p < 0.01){
-    text(x = 1.55, y = yp[length(yp)], labels = "**", cex = 3)
+    text(x = 1.55, y = yp[length(yp)], labels = "**", cex = font_size)
   }else if(p < 0.05){
-    text(x = 1.55, y = yp[length(yp)], labels = "*", cex = 3)
+    text(x = 1.55, y = yp[length(yp)], labels = "*", cex = font_size)
+  }else{
+    segments(x0 = 1, y0 = yp[length(yp)]-0.1, x1 = 2, y1 = yp[length(yp)]-0.1, col = "black", lty = 1)
+    text(x = 1.55, y = yp[length(yp)], labels = paste0("NS [", round(p, 3),"]"), cex = font_size, font = 3)
   }
 
 
@@ -129,6 +126,10 @@ plotApobecDiff = function(tnm, maf, title_size = 1, axis_lwd = 1, font_size = 1.
                                   no = ifelse(test = mcr[Hugo_Symbol %in% rownames(mcg.gs), pval] < 0.01, yes = '**',
                                               no = ifelse(mcr[Hugo_Symbol %in% rownames(mcg.gs), pval] < 0.05, yes = '*', no = ''))))
 
+  if(nrow(mcg.gs) > 10){
+    message(paste0("Showing top 10 of ", nrow(mcg.gs), " differentially mutated genes"))
+    mcg.gs = mcg.gs[1:10,]
+  }
   par(bty="n", mgp = c(0.5,0.5,0), mar = c(7,3.5,0,0) + 0.1, las=1, tcl=-.25, font.main=4, xpd=NA)
   barplot(height = t(mcg.gs), beside = TRUE, las =2, ylab = "", border = NA, font.axis = 3,
           font.lab = 2, col = c('maroon', 'royalblue'),
