@@ -4,13 +4,15 @@
 \alias{plotApobecDiff}
 \title{Plot differences between APOBEC enriched and non-APOBEC enriched samples.}
 \usage{
-plotApobecDiff(tnm, maf, title_size = 1, axis_lwd = 1,
+plotApobecDiff(tnm, maf, pVal = 0.05, title_size = 1, axis_lwd = 1,
   font_size = 1.2)
 }
 \arguments{
 \item{tnm}{output generated by \code{\link{trinucleotideMatrix}}}
 
 \item{maf}{an \code{\link{MAF}} object used to generate the matrix}
+
+\item{pVal}{p-value threshold for fisher's test. Default 0.05.}
 
 \item{title_size}{size of title. Default 1.3}
 
